<resources>
    <string name="app_name">Laboratorio3Apps</string>
    <string name="tikal">Tikal</string>
    <string name="antigua">Antigua</string>
    <string name="atitlan">Atitlán</string>
    <string name="name">Nombre</string>
    <string name="atitlan_image">Imagen del lago de Atitlan</string>
    <string name="guatemala">Guatemala</string>
    <string name="phName">Ingrese su Nombre</string>
    <string name="contentFav">favorito</string>
    <string name="guatemala_description">Guatemala, oficialmente República de Guatemala, es un país de América Central con características peculiares y una cultura autóctona que es el producto de la herencia maya y la influencia española durante el período colonial. Al mismo tiempo es un país con una gran belleza natural. A pesar de su tamaño, Guatemala cuenta con una gran variedad climática y biológica producto de su relieve montañoso que va desde los 0 metros sobre el nivel del mar hasta los 4,220 metros sobre el nivel del mar, esto propicia que en el país existan ecosistemas tan variados que van desde los manglares de los humedales del pacífico hasta los bosques nublados de alta montaña. Limita al oeste y norte con México, al este con Belice y el Golfo de Honduras, al sureste con Honduras y El Salvador, y al sur con el Océano Pacífico. El país tiene 108.889 km² (la República de Guatemala mantiene un diferendo territorial con Belice, por 12.000 km²). Su capital es la Ciudad de Guatemala llamada oficialmente Nueva Guatemala de la Asunción. Su población indígena compone un tercio de la población del país. El idioma oficial es el español, asimismo cuenta con 23 idiomas mayas, el idioma xinka y Garifuna, el cual es hablado por la población afrodescendiente.</string>
    <string name="hello">Hola</string>
</resources>
