<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/atitlan_image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="h,16:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/guatemala" />

    <Button
        android:id="@+id/btnAtitlan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/atitlan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAntigua" />

    <TextView
        android:id="@+id/txtHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/hello"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/etName"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAntigua"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/antigua"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnAtitlan"
        app:layout_constraintEnd_toStartOf="@+id/btnAtitlan"
        app:layout_constraintStart_toEndOf="@+id/btnTikal" />

    <Button
        android:id="@+id/btnTikal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tikal"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnAntigua"
        app:layout_constraintEnd_toStartOf="@+id/btnAntigua"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtGuatemala"
        style="@style/defaultTextRoboto"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/guatemala"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtName"
        style="@style/defaultTextRoboto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/etName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtName"
        app:layout_constraintTop_toBottomOf="@+id/txtGuatemala" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/colorPrimary"

        android:contentDescription="@string/contentFav"
        android:padding="5dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:srcCompat="@android:drawable/btn_star" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAntigua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                style="@style/defaultTextRoboto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/guatemala_description"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>